# fbow

./: CMakeLists.txt  ImageMatching.py  README.md  cpu_x86.h  fbow.cpp  fbow.h  package.xml  vocabulary_creator.cpp  vocabulary_creator.h
src/: CMakeLists.txt  Database.cpp  Database.h  QueryResults.cpp  QueryResults.h  cpu.h  cpu_x86.h  exports.h  fbow.cpp  fbow.h  vocabulary_creator.cpp  vocabulary_creator.h
tests/: CMakeLists.txt  README_DBOW2  dbow2fbow.cpp  test_cpu_x86.cpp  test_dbow2VSfbow.cpp  test_flann.cpp
tests/dbow2/: BowVector.h  CMakeLists.txt  FORB.cpp  FORB.h  FeatureVector.h  TemplatedVocabulary.h
utils/: CMakeLists.txt  dirreader.h  fbow_create_voc_step0.cpp  fbow_create_voc_step0_list.cpp  fbow_create_voc_step1.cpp  fbow_create_voc_step1_opencv.cpp  fbow_demo.cpp  fbow_transform.cpp  image_matching.cpp
